--- a/src/index.css
+++ b/src/index.css
@@ -191,9 +191,19 @@
   border: none;
 }
 
+
+
 .boxCarrito{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.boxTituloCarrito{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
 }
